--- a/app/package.json
+++ b/app/package.json
@@ -5,22 +5,26 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.1",
-    "@sanity/types": "^3.50.0",
-    "@types/node": "^18.17.14",
-    "nuxt": "^3.12.3",
-    "postcss": "^8.4.39",
-    "postcss-nested": "^6.0.1"
+    "postinstall": "nuxt prepare",
+    "preview": "nuxt preview"
   },
   "dependencies": {
     "@nuxtjs/google-fonts": "^3.0.0",
     "@nuxtjs/sanity": "^1.10.1",
     "@portabletext/vue": "^1.0.7",
     "@sanity/image-url": "^1.0.2",
+    "@vueuse/core": "^11.0.3",
+    "@vueuse/nuxt": "^11.0.3",
     "groq": "^3.9.1"
+  },
+  "devDependencies": {
+    "@nuxt/image": "^1.8.0",
+    "@nuxtjs/tailwindcss": "^6.12.1",
+    "@pinia/nuxt": "^0.5.4",
+    "@sanity/types": "^3.50.0",
+    "@types/node": "^18.17.14",
+    "nuxt": "^3.13.1",
+    "postcss": "^8.4.39",
+    "postcss-nested": "^6.0.1"
   }
 }
