--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,8 @@
     "@sanity/image-url": "^1.0.2",
     "@vueuse/core": "^11.0.3",
     "@vueuse/nuxt": "^11.0.3",
-    "groq": "^3.9.1"
+    "groq": "^3.9.1",
+    "radix-vue": "^1.9.5"
   },
   "devDependencies": {
     "@nuxt/image": "^1.8.0",
