--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,8 @@
     "@nuxtjs/sanity": "^1.10.1",
     "@portabletext/vue": "^1.0.7",
     "@sanity/image-url": "^1.0.2",
+    "@vee-validate/nuxt": "^4.13.2",
+    "@vee-validate/yup": "^4.13.2",
     "@vueuse/core": "^11.0.3",
     "@vueuse/nuxt": "^11.0.3",
     "groq": "^3.9.1",
