--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,8 @@
     "@vueuse/core": "^11.0.3",
     "@vueuse/nuxt": "^11.0.3",
     "groq": "^3.9.1",
-    "radix-vue": "^1.9.5"
+    "radix-vue": "^1.9.5",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@nuxt/image": "^1.8.0",
