--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,8 @@
     "@vueuse/nuxt": "^11.0.3",
     "groq": "^3.9.1",
     "radix-vue": "^1.9.5",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "vue-tg": "^0.8.0"
   },
   "devDependencies": {
     "@nuxt/image": "^1.8.0",
